DOCS: Add native access flag to example run commands
Documents --enable-native-access=ALL-UNNAMED for the fat-jar examples and the module path alternative, per 51Degrees/device-detection-java#476.